fixed modal background-color on dark mode

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ textarea:focus {
 }
 
 .service-card p {
-  font-size: 15px;
+  font-size: 15gitpx;
   color: #666;
   flex-grow: 1; /* Allows the paragraph to fill the space */
   margin: 0 0 20px 0; /* Ensures spacing at the bottom */
@@ -668,7 +668,7 @@ nav {
 }
 .modal {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
@@ -697,6 +697,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   position: relative;
+  
   transition: all 300ms ease-in;
 }
 
@@ -709,7 +710,11 @@ nav {
   background-color: rgb(245, 245, 245);
   transform: translateX(-110%);
 }
-
+/* Dark theme styles */
+.dark-theme .modal__about {
+  background-color: #333; /* Dark background color */
+  color: white; /* Light text color */
+}
 .modal__languages {
   display: flex;
   flex-wrap: wrap;
